# DACS-AUQ

./: .gitignore  pyproject.toml  uq_experiments.md  uq_theory.md
configs/: e0_gen.yaml  e1_primary.yaml  e1b_contamination.yaml
notes/: auq_notes.md  issue_loop_repetition.md  redact_notes.md
prompts/: auq_baseline_system.txt  auq_reflection.txt  elicit_auq_entangled.txt  posthoc_numeric_action.txt  posthoc_verbal.txt  redact_action.txt  redact_action_v2.txt  redact_reasoning.txt  redact_reasoning_v2.txt
react_validation/: HOTPOT_REPORT.md  PILOT_REPORT.md  README.md  ask.py  chat_react.py  chat_react_entangled.py  probes.py  react_alfworld.py  run_pilot.sh  run_probes.py  run_validation.sh  uq_experiments_v2.md  uq_theory_v2.md  uqlog.py
react_validation/analysis/: backfill_tau.py  contamination_extraction.py  contamination_report.md
react_validation/scripts/: run_hotpot_acquisition.sh  run_hotpot_parallel.sh  run_hotpot_pilot.sh  run_hotpot_validation.sh  run_pilot.sh  run_validation.sh  serve.sh
react_validation/src/: audit_hotpot.py  audit_hotpot_outputs.py  audit_v2.py  chat_react.py  chat_react_entangled.py  chat_react_hotpot.py  chat_react_hotpot_entangled.py  check_uplus.py  hotpot_common.py  hotpot_runtime.py  hotpot_tau_map.py  judge_e0.py  judge_hotpot.py  probes.py  react_alfworld.py  react_hotpotqa.py  run_probes.py  (+2 more)
scripts/: serve_agent.sh  serve_judge.sh
src/: run.py  schema.py
tests/: test_e0.py  test_elicited.py  test_judge.py  test_loops.py  test_parse.py  test_posthoc.py  test_tau_map.py
v1/: package-lock.json  uq_experiments.md
(+48 files in other folders)
